platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_36.platter
start(){
    piece of x = 7;
    check(x > 0){
        bill(tochars(x * x));
    } instead {
        bill(tochars(-x));
    }
}